# Taller-de-titulo

./: .gitignore  README.DEV.md  codegraph-sync-all.ps1  codegraph-sync-all.sh  codegraph.json  codegraph.workspace.json  start-dev.bat
backend/: .dockerignore  .env.example  .gitignore  SWAGGER_DOCUMENTATION.md  codegraph.json  docker-compose.yml  package-lock.json  package.json  request-confirmation-code-sequence-diagram.puml
docs/: 01-vision-contexto.md  02-estado-actual.md  03-arquitectura-objetivo.md  04-plan-por-fases.md  05-decisiones-tecnicas.md  06-bitacora.md  README.md
frontend/: .env  .env.example  .gitignore  CRUD_IMPLEMENTATION.md  EJECUCION_IMPLEMENTACION_FRONTEND.md  ESTRUCTURA_ARCHIVOS.md  FRONTEND_PERMISSIONS_GUIDE.md  IMPLEMENTACION_NOTIFICACIONES.md  NOTIFICACIONES_PUSH.md  NOTIFICATIONS_SYSTEM.md  QR_CODE_SYSTEM.md  QR_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  TESTING_NOTIFICACIONES.md  VEHICLES_MODULE_COMPLETE.md  VISITS_MODULE_COMPLETE.md  VISIT_FORM_IMPROVEMENTS.md  codegraph.json  index.html  package-lock.json  package.json  (+3 more)
lpr/: .env  .env.example  .gitignore  __init__.py  cli.py  codegraph.json  config.py  debug_visual_guardian.py  execute_worker.py  manager.py  pyproject.toml  requirements.txt  settings.py
lpr/api/: __init__.py  client.py  manager.py
lpr/detector/: __init__.py  yolo_detector.py
lpr/lpr.egg-info/: PKG-INFO  SOURCES.txt
lpr/ocr/: __init__.py  fast_ocr_adapter.py
lpr/processor/: guardian_worker.py  rules.py  worker.py
lpr/storage/: __init__.py  fs_storage.py
lpr/test_video/: .gitignore
lpr/utils/: images.py
(+431 files in other folders)
